--- a/robbie_lens/a-propos.css
+++ b/robbie_lens/a-propos.css
@@ -13,8 +13,14 @@ footer {
 .lien_nav
 {
     color: black;
+	text-decoration: none;
 }
-
+h1
+{
+	font-size: 3.5em;
+	color: #A5B4FC;
+	font-family: 'Montserrat', sans-serif;
+}
 nav
 {
     display: flex;
