--- a/robbie_lens/style.css
+++ b/robbie_lens/style.css
@@ -73,19 +73,22 @@ h1, h2 {
 nav {
     display: flex;
     background-color: white;
-    padding-left: 10px;
+    padding-left: 10px; 
 }
 
-nav ul {
+nav ul
+{
     list-style: none;
     display: flex;
     flex-direction: row;
-    align-items: end;
+    justify-content: end;
+    align-items: center;
     width: 100%;
-    font-size: 1em;
+    font-size: 1.3em;
     font-family: 'Manrope', sans-serif;
+    padding-right: 20px;
+    column-gap: 2%;
 }
-
 nav a {
     color: black;
     text-decoration: none;
@@ -187,4 +190,72 @@ em {
 .titre_paragraphe a
 {
 	padding: 1.5em 3em 1.5em 3em;
+}
+
+h3
+{
+    text-align: center;
+    justify-content: center;
+    font-size: 3em;
+    color: black;
+    width: 100%;
+}
+.photo
+{
+    display:flex;
+    flex-wrap: wrap;
+    background-color: white;
+    padding: 8em;
+    justify-content: center;
+}
+.photo img
+{
+    padding-top:3em;
+}
+.photo .lien-degrade
+{
+    padding-top: 3em;
+}
+.photo2
+{
+    padding-top: 2%;
+    display: flex;
+    column-gap: 2%;
+}
+.titre1 h1
+{
+    display: flex;
+    align-items: center;
+    padding-left: 10%;
+    padding-top: 2%;
+    background-color: #1F2039;
+}
+
+.conteneur-pf, .conteneur-pf h2
+{
+    background-color: white;
+}
+.paysage img, .portrait img
+{
+    width: 20%;
+    height: 300px;
+}
+.conteneur_paysage h2, .conteneur_portrait h2
+{
+    color: black;
+    font-size: 2.2em;
+    padding:1em;
+}
+.conteneur_paysage .paysage
+{
+
+}
+.portrait
+{
+}
+.paysage
+{
+    display: grid;
+    flex-wrap: ;
+    grid
 }
