--- a/robbie_lens/style.css
+++ b/robbie_lens/style.css
@@ -221,6 +221,8 @@ h3
 .photo img
 {
     padding-top:1.5em;
+    position: relative;
+    background: lightgray;
 }
 .photo .lien-degrade
 {
@@ -263,3 +265,30 @@ main .h1
     height: 50em;
     width: 45em;
 }
+
+.image-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.image-wrapper img {
+    display: block;
+    width: 35em;
+    height: 568px;
+}
+
+.image-wrapper::after {
+  content: "";
+  position: absolute;
+  bottom: -30px;         /* écart en bas */
+  right: -30px;          /* écart à droite */
+  width: 25%;           /* longueur ligne horizontale */
+  height: 25%;          /* hauteur ligne verticale */
+  border-right: 2.5px solid #8e86b5;
+  border-bottom: 2.5px solid #8e86b5;
+}
+
+/* .lien-degrade
+{
+    display: inline-block;
+} */
