--- a/robbie_lens/style/index.css
+++ b/robbie_lens/style/index.css
@@ -15,17 +15,18 @@
     display: flex;
     flex-direction: column;
     justify-content:space-between;
-    height: 500px;
+    height: 450px;
     width: 40em;
 }
 
 .p_photo img {
-    width: 35em;
-    height: 568px;
+    width: 30em;
+    height: 468px;
 }
 
 .p_photo h1 {
-    font-size: 4em;
+    font-size: 3.5em;
+	font-weight: 500;
 }
 
 .p_photo p {
@@ -45,13 +46,12 @@
 .photo h3 {
     padding-bottom: 1.5em;
     color:#1F2039;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .photo img {
     padding-top:1.5em;
     position: relative;
-    height: 30em;
 }
 
 .photo .lien-degrade {
@@ -66,7 +66,7 @@
 h3
 {
     padding-top: 2em;
-    font-size: 3em;
+    font-size: 1.5em;
     text-align: center;
     color: #A5B4FC;
 }
@@ -85,7 +85,7 @@ form
 
 label
 {
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: 400;
 }
 input
@@ -95,15 +95,16 @@ input
 textarea
 {
     grid-column: 1 / 3;
-    height: 20em;
-    font-size: 2em;
+    height: 5em;
+	width: 100%;
+    font-size: 1.5em;
 }
 #btn-submit
 {
     font-family: 'Manrope', sans-serif;
     color: white;
     background: #8e86b5;
-    border-radius: 50px;
+    border-radius: 50px;	
     text-decoration: none;
     font-size: x-large;
     padding: 1em 1.5em;
