--- a/robbie_lens/style/style.css
+++ b/robbie_lens/style/style.css
@@ -64,6 +64,7 @@ body
     color: #F9F8FF;
     margin: 0;
 	min-height: 100vh;
+    min-width: 100vh;
 	display: grid;
 	grid-template-rows: auto 1fr auto;
 }
